# moltis

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  discord.html  fly.toml  justfile  memory.html  render.yaml  shell.nix  slack.html  telegram.html  toc.html  toc.js
.claude/: settings.json
.do/: deploy.template.yaml
.github/workflows/: ci.yml  deb-packages.yml  release.yml
apps/courier/src/: main.rs
crates/agents/src/: prompt.rs  runner.rs
crates/auto-reply/src/: reply.rs
crates/channels/src/: gating.rs  lib.rs  message_log.rs  plugin.rs  store.rs
crates/chat/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/src/: types.rs
crates/config/src/: schema.rs  template.rs
crates/cron/src/: service.rs
crates/discord/src/: outbound.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: approval.rs  channel.rs  channel_events.rs  channel_store.rs  chat.rs  lib.rs  local_llm_setup.rs  message_log_store.rs  methods.rs  node_exec.rs  project.rs  server.rs  services.rs  state.rs  tailscale_routes.rs  tls.rs  ws.rs
crates/gateway/tests/: heartbeat_cron.rs
crates/gateway/ui/: input.css
crates/httpd/src/: server.rs
crates/media/: Cargo.toml
crates/media/src/: mime.rs
crates/oauth/src/: callback_server.rs  (+1 more)
crates/slack/: Cargo.toml
crates/slack/src/: markdown.rs  outbound.rs  socket.rs
crates/telegram/: Cargo.toml
crates/tools/: Cargo.toml
docs/: metrics-and-tracing.md
docs/src/: SUMMARY.md  local-validation.md  session-branching.md
features/: agent-loop-parity.md
snap/: snapcraft.yaml
website/: index.html
(+59 files in other folders)
