[package]
edition.workspace = true
name              = "moltis-slack"
version.workspace = true

[dependencies]
async-trait     = { workspace = true }
base64          = { workspace = true }
bytes           = { workspace = true }
hmac            = { workspace = true }
http            = { workspace = true }
moltis-channels = { workspace = true }
moltis-common   = { workspace = true }
moltis-metrics  = { optional = true, workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
slack-morphism      = { workspace = true }
# Workaround: slack-morphism's `rustls-native-certs` feature enables
# `tokio-tungstenite/rustls-native-certs` (the dep crate) but misses
# `tokio-tungstenite/rustls-tls-native-roots` (the actual TLS feature).
# Pull in the correct feature here until upstream fixes it.
tokio-tungstenite   = { version = "0.28", features = ["rustls-tls-native-roots"] }
tokio               = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }

[features]
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
